data/all_generated_tests/raw_wast_tests/unreachable_ImproperFunctionCallorReturnHandling_1492.wast
;; 3. **Unreachable after Call and Return:**    - **Test Description:** Implement a function that calls another function which returns successfully, followed immediately by an `unreachable` instruction.    - **Constraint Checked:** This verifies that the call returns correctly before the `unreachable` triggers a trap.    - **Improper Handling Aspect:** Confirms that return value processing is completed before the trap interrupts further execution.

(assert_invalid
  (module
    (func $callee (result i32)
      i32.const 42)
    (func $caller
      call $callee
      unreachable
      i32.const 0))
  "type mismatch"
)